@@ -379,7 +379,8 @@ bcdui.core.DataProvider = class extends bcdui.core.AbstractExecutable
    */
   _getFillParams(fillParams, xPath)
     {
-      var x = xPath;
+      var xPathClean = xPath.replace(/\*/g, "\uE0F3"); // replace * with some utf8 char, so we can have xPaths with *
+      var x = xPathClean;
       var concat = false;
       if (typeof fillParams == "object") {
         var obj = {};
@@ -390,13 +391,13 @@ bcdui.core.DataProvider = class extends bcdui.core.AbstractExecutable
             obj[p] = gotApos ? "Xconcat('" + fillParams[p].replace(/'/g, `', "'", '`) + "', ''X)" : fillParams[p];
           }
         }
-        x = doT.template(xPath)(obj);
+        x = doT.template(xPathClean)(obj);
       }
 
       // remove possibly existing outer quotes/apostrophe around the inserted concat to make a valid xPath expression
       if (concat)
         x = x.replace(/('|\")*(\s)*Xconcat\('/g, "concat('").replace(/, ''X\)(\s)*('|\")*/g, ", '')");
-      return x;
+      return x.replace(/\uE0F3/g, "*"); // don't forget to replace the utf8 char back to *
     }
 
   /**
